--- a/api/package.json
+++ b/api/package.json
@@ -11,5 +11,10 @@
   },
   "scripts": {
     "start": "ts-node src/index.ts"
+  },
+  "devDependencies": {
+    "@types/node": "^13.7.0",
+    "ts-node": "^8.6.2",
+    "typescript": "^3.7.5"
   }
 }
