--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
 version: "3"
 services:
-  postgres:
+  db:
     image: postgres:latest
+    volumes:
+      - ./api/pgdata:/var/lib/postgresql/data
   api:
     build:
       context: ./api
