--- a/api/package.json
+++ b/api/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.17.1",
+    "ioredis": "^4.14.1",
     "pg": "^7.18.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.22"
@@ -16,6 +17,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
+    "@types/ioredis": "^4.14.6",
     "@types/node": "^13.7.0",
     "ts-node": "^8.6.2",
     "ts-node-dev": "^1.0.0-pre.44",
