--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,13 @@ services:
       - /app/node_modules
       - ./api:/app
     environment:
-      - PGUSER="postgres"
-      - PGHOST="postgres"
-      - PGDATABASE="postgres"
-      - PGPASSWORD="postgres_password"
-      - PGPOR=5432
+      - REDISHOST=redis
+      - REDISPORT=6379
+      - PGUSER=postgres
+      - PGHOST=db
+      - PGDATABASE=postgres
+      - PGPASSWORD=postgres_password
+      - PGPORT=5432
+      - SALT=1
+    ports:
+      - 4000:4000
