--- a/api/package.json
+++ b/api/package.json
@@ -5,10 +5,15 @@
   "author": "Endre Vegh",
   "license": "MIT",
   "dependencies": {
+    "apollo-server-express": "^2.9.16",
+    "bcrypt": "^3.0.7",
+    "class-validator": "^0.11.0",
     "express": "^4.17.1",
+    "graphql": "^14.6.0",
     "ioredis": "^4.14.1",
     "pg": "^7.18.1",
     "reflect-metadata": "^0.1.13",
+    "type-graphql": "^0.17.6",
     "typeorm": "^0.2.22"
   },
   "scripts": {
@@ -16,7 +21,9 @@
     "dev": "ts-node-dev src/index.ts"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.2",
+    "@types/graphql": "^14.5.0",
     "@types/ioredis": "^4.14.6",
     "@types/node": "^13.7.0",
     "ts-node": "^8.6.2",
