--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
     "express": "^4.17.1",
     "graphql": "^14.6.0",
     "ioredis": "^4.14.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^7.18.1",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^0.17.6",
@@ -25,6 +26,7 @@
     "@types/express": "^4.17.2",
     "@types/graphql": "^14.5.0",
     "@types/ioredis": "^4.14.6",
+    "@types/jsonwebtoken": "^8.3.7",
     "@types/node": "^13.7.0",
     "ts-node": "^8.6.2",
     "ts-node-dev": "^1.0.0-pre.44",
