--- a/web/package.json
+++ b/web/package.json
@@ -1,8 +1,18 @@
 {
   "dependencies": {
+    "@apollo/client": "^3.0.0-beta.32",
+    "@apollo/react-ssr": "^4.0.0-beta.1",
+    "graphql": "^14.6.0",
+    "graphql-tag": "^2.10.2",
     "next": "^9.2.1",
+    "node-fetch": "^2.6.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
+  },
+  "devDependencies": {
+    "@types/node": "^13.7.0",
+    "@types/react": "^16.9.19",
+    "typescript": "^3.7.5"
   },
   "scripts": {
     "dev": "next",
