--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@types/node": "^13.7.0",
+    "@types/node-fetch": "^2.5.4",
     "@types/react": "^16.9.19",
     "typescript": "^3.7.5"
   },
