--- a/web/package.json
+++ b/web/package.json
@@ -10,14 +10,19 @@
     "react-dom": "^16.12.0"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^1.12.2",
     "@types/node": "^13.7.0",
     "@types/node-fetch": "^2.5.4",
     "@types/react": "^16.9.19",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "@graphql-codegen/typescript": "1.12.2",
+    "@graphql-codegen/typescript-operations": "1.12.2",
+    "@graphql-codegen/typescript-react-apollo": "1.12.2"
   },
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "gen": "graphql-codegen --config codegen.yml"
   }
 }
