--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -17,4 +17,8 @@ server {
     rewrite /(.*) /graphql break;
     proxy_pass http://api;
   }
+
+  location /refresh_token {
+    proxy_pass http://api;
+  }
 }
