--- a/api/package.json
+++ b/api/package.json
@@ -8,6 +8,7 @@
     "apollo-server-express": "^2.9.16",
     "bcrypt": "^3.0.7",
     "class-validator": "^0.11.0",
+    "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "graphql": "^14.6.0",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
     "@types/graphql": "^14.5.0",
