--- a/web/package.json
+++ b/web/package.json
@@ -5,8 +5,8 @@
     "formik": "^2.1.4",
     "graphql": "^14.6.0",
     "graphql-tag": "^2.10.2",
+    "isomorphic-unfetch": "^3.0.0",
     "next": "^9.2.1",
-    "node-fetch": "^2.6.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
@@ -16,7 +16,6 @@
     "@graphql-codegen/typescript-operations": "1.12.2",
     "@graphql-codegen/typescript-react-apollo": "1.12.2",
     "@types/node": "^13.7.0",
-    "@types/node-fetch": "^2.5.4",
     "@types/react": "^16.9.19",
     "typescript": "^3.7.5"
   },
