change nginx route

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -13,8 +13,7 @@ server {
     proxy_pass http://web;
   }
 
-  location /api {
-    rewrite /(.*) /graphql break;
+  location /graphql {
     proxy_pass http://api;
   }
 
