--- a/web/package.json
+++ b/web/package.json
@@ -1,7 +1,12 @@
 {
   "dependencies": {
-    "@apollo/client": "^3.0.0-beta.32",
-    "@apollo/react-ssr": "^4.0.0-beta.1",
+    "@apollo/react-hooks": "^3.1.2",
+    "@apollo/react-ssr": "^3.1.2",
+    "apollo-boost": "^0.4.4",
+    "apollo-link-context": "^1.0.19",
+    "apollo-link-token-refresh": "^0.2.7",
+    "cookie": "^0.4.0",
+    "jwt-decode": "^2.2.0",
     "formik": "^2.1.4",
     "graphql": "^14.6.0",
     "graphql-tag": "^2.10.2",
@@ -11,6 +16,8 @@
     "react-dom": "^16.12.0"
   },
   "devDependencies": {
+    "@types/cookie": "^0.3.3",
+    "@types/jwt-decode": "^2.2.1",
     "@graphql-codegen/cli": "^1.12.2",
     "@graphql-codegen/typescript": "1.12.2",
     "@graphql-codegen/typescript-operations": "1.12.2",
