add emotion && and emotion ssr

--- a/web/package.json
+++ b/web/package.json
@@ -2,28 +2,31 @@
   "dependencies": {
     "@apollo/react-hooks": "^3.1.2",
     "@apollo/react-ssr": "^3.1.2",
+    "@emotion/core": "^10.0.27",
+    "@emotion/styled": "^10.0.27",
     "apollo-boost": "^0.4.4",
     "apollo-link-context": "^1.0.19",
     "apollo-link-token-refresh": "^0.2.7",
     "cookie": "^0.4.0",
-    "jwt-decode": "^2.2.0",
     "formik": "^2.1.4",
     "graphql": "^14.6.0",
     "graphql-tag": "^2.10.2",
     "isomorphic-unfetch": "^3.0.0",
+    "jwt-decode": "^2.2.0",
     "next": "^9.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
   "devDependencies": {
-    "@types/cookie": "^0.3.3",
-    "@types/jwt-decode": "^2.2.1",
     "@graphql-codegen/cli": "^1.12.2",
     "@graphql-codegen/typescript": "1.12.2",
     "@graphql-codegen/typescript-operations": "1.12.2",
     "@graphql-codegen/typescript-react-apollo": "1.12.2",
+    "@types/cookie": "^0.3.3",
+    "@types/jwt-decode": "^2.2.1",
     "@types/node": "^13.7.0",
     "@types/react": "^16.9.19",
+    "babel-plugin-emotion": "^10.0.27",
     "typescript": "^3.7.5"
   },
   "scripts": {
