--- a/web/package.json
+++ b/web/package.json
@@ -8,6 +8,8 @@
     "apollo-link-context": "^1.0.19",
     "apollo-link-token-refresh": "^0.2.7",
     "cookie": "^0.4.0",
+    "emotion": "^10.0.27",
+    "emotion-server": "^10.0.27",
     "formik": "^2.1.4",
     "graphql": "^14.6.0",
     "graphql-tag": "^2.10.2",
@@ -26,7 +28,6 @@
     "@types/jwt-decode": "^2.2.1",
     "@types/node": "^13.7.0",
     "@types/react": "^16.9.19",
-    "babel-plugin-emotion": "^10.0.27",
     "typescript": "^3.7.5"
   },
   "scripts": {
