--- a/api/package.json
+++ b/api/package.json
@@ -21,7 +21,9 @@
   },
   "scripts": {
     "start": "ts-node src/index.ts",
-    "dev": "ts-node-dev src/index.ts"
+    "dev": "ts-node-dev src/index.ts",
+    "db:setup": "ts-node ./test-utils/setup.ts",
+    "test": "npm run db:setup && jest --watchAll"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
@@ -30,8 +32,11 @@
     "@types/express": "^4.17.2",
     "@types/graphql": "^14.5.0",
     "@types/ioredis": "^4.14.6",
+    "@types/jest": "^25.1.3",
     "@types/jsonwebtoken": "^8.3.7",
     "@types/node": "^13.7.0",
+    "jest": "^25.1.0",
+    "ts-jest": "^25.2.1",
     "ts-node": "^8.6.2",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.7.5"
