--- a/web/package.json
+++ b/web/package.json
@@ -25,15 +25,19 @@
     "@graphql-codegen/typescript-operations": "1.12.2",
     "@graphql-codegen/typescript-react-apollo": "1.12.2",
     "@types/cookie": "^0.3.3",
+    "@types/jest": "^25.1.3",
     "@types/jwt-decode": "^2.2.1",
     "@types/node": "^13.7.0",
     "@types/react": "^16.9.19",
+    "jest": "^25.1.0",
+    "ts-jest": "^25.2.1",
     "typescript": "^3.7.5"
   },
   "scripts": {
     "dev": "next",
     "build": "next build",
     "start": "next start",
+    "test": "jest",
     "gen": "graphql-codegen --config codegen.yml && node replaceDependencyScript.js"
   }
 }
