--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,16 @@ after_success:
   - docker push dockerquark/journal-web-prod
   - docker push dockerquark/journal-api-prod
   - docker push dockerquark/journal-nginx-prod
+
+deploy:
+  edge: true
+  provider: elasticbeanstalk
+  region: eu-west-2
+  app: journal
+  environment: Journal-env
+  bucket_name: elasticbeanstalk-eu-west-2-261235767811
+  bucket_path: journal
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_ACCESS_KEY
