--- a/.travis.yml
+++ b/.travis.yml
@@ -28,4 +28,4 @@ deploy:
   on:
     branch: master
   access_key_id: $AWS_ACCESS_KEY
-  secret_access_key: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
