add tlc container

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -6,6 +6,10 @@ upstream api {
   server api:4000;
 }
 
+upstream tlc {
+  server tlc:6000;
+}
+
 server {
   listen 80;
 
@@ -19,5 +23,9 @@ server {
 
   location /refresh_token {
     proxy_pass http://api;
+  }
+
+  location /tlc {
+    proxy_pass http://tlc;
   }
 }
