try second time

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -9,7 +9,7 @@ upstream api {
 server {
   listen 80;
 
-  location / {
+  location /_next {
 
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -18,6 +18,10 @@ server {
 
     proxy_pass http://web/;
     proxy_redirect off;
+  }
+
+  location / {
+    proxy_pass http://web/;
   }
 
   location /graphql {
