--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:alpine
+FROM node:alpine as builder
 
 WORKDIR /app
 
@@ -8,7 +8,14 @@ RUN yarn install
 
 COPY . .
 
+RUN rm -rf .next
+
 RUN yarn build
 
 CMD [ "yarn", "start" ]
+
+# FROM nginx
+
+# COPY --from=builder ./.next 
+# COPY ./default.conf /etc/nginx/conf.d/default.conf
 
