--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
     "graphql": "^14.6.0",
     "ioredis": "^4.14.1",
     "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.4.4",
     "pg": "^7.18.1",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^0.17.6",
@@ -35,6 +36,7 @@
     "@types/jest": "^25.1.3",
     "@types/jsonwebtoken": "^8.3.7",
     "@types/node": "^13.7.0",
+    "@types/nodemailer": "^6.4.0",
     "jest": "^25.1.0",
     "ts-jest": "^25.2.1",
     "ts-node": "^8.6.2",
