add verify email nginx

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -20,4 +20,8 @@ server {
   location /refresh_token {
     proxy_pass http://api;
   }
+
+  location /verify_email {
+    proxy_pass http://api;
+  }
 }
