--- a/api/package.json
+++ b/api/package.json
@@ -18,7 +18,8 @@
     "pg": "^7.18.1",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^0.17.6",
-    "typeorm": "^0.2.22"
+    "typeorm": "^0.2.22",
+    "uuid": "^7.0.1"
   },
   "scripts": {
     "start": "ts-node src/index.ts",
@@ -37,6 +38,7 @@
     "@types/jsonwebtoken": "^8.3.7",
     "@types/node": "^13.7.0",
     "@types/nodemailer": "^6.4.0",
+    "@types/uuid": "^7.0.0",
     "jest": "^25.1.0",
     "ts-jest": "^25.2.1",
     "ts-node": "^8.6.2",
