--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,8 @@ services:
       - ./web:/app
     environment:
       - USE_STAGING=false
-      - LOCAL_URL=http://192.168.0.106:3050
+      # - LOCAL_URL=http://192.168.0.106:3050
+      - LOCAL_URL=http://192.168.43.169:3050
       - STAGING_URL=http://journal-env.rcpv566ppp.eu-west-2.elasticbeanstalk.com
   api:
     build:
@@ -52,4 +53,5 @@ services:
       - ACCESS_TOKEN_EXPIRY=10d
       - REFRESH_TOKEN_SECRET=secret
       - REFRESH_TOKEN_EXPIRY=10d
-      - LOCAL_URL=http://192.168.0.106:3050
+      # - LOCAL_URL=http://192.168.0.106:3050
+      - LOCAL_URL=http://192.168.43.169:3050
