--- a/api/package.json
+++ b/api/package.json
@@ -44,5 +44,8 @@
     "ts-node": "^8.6.2",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.7.5"
+  },
+  "resolutions": {
+    "acorn": "^7.1.1"
   }
 }
