--- a/config/web-deployment.yaml
+++ b/config/web-deployment.yaml
@@ -1,12 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  # this is for logging / debugging
   name: web-deployment
 spec:
+  # how many instances
   replicas: 1
+  # this matches the pod label
   selector:
     matchLabels:
       component: web
+  # this describes the pod definition
   template:
     metadata:
       labels:
