--- a/k8-config/deployment-ps.yaml
+++ b/k8-config/deployment-ps.yaml
@@ -16,6 +16,10 @@ spec:
       labels:
         component: ps
     spec:
+      volumens:
+        - name: postgres-storage
+          persistentVolumeClaim:
+            claimName: ps-volume-claim
       containers:
         - name: ps
           image: postgres
