--- a/k8-config/deployment-ps.yaml
+++ b/k8-config/deployment-ps.yaml
@@ -16,7 +16,7 @@ spec:
       labels:
         component: ps
     spec:
-      volumens:
+      volumes:
         - name: postgres-storage
           persistentVolumeClaim:
             claimName: ps-volume-claim
@@ -25,3 +25,7 @@ spec:
           image: postgres
           ports:
             - containerPort: 5432
+          volumeMounts:
+            - name: postgres-storage
+              mountPath: /var/lib/postgresql/data
+              subPath: postgres
