--- a/k8-config/deployment-ps.yaml
+++ b/k8-config/deployment-ps.yaml
@@ -22,9 +22,12 @@ spec:
             claimName: ps-volume-claim
       containers:
         - name: ps
-          image: postgres
+          image: postgres:latest
           ports:
             - containerPort: 5432
+          env:
+            - name: POSTGRES_HOST_AUTH_METHOD
+              value: trust
           volumeMounts:
             - name: postgres-storage
               mountPath: /var/lib/postgresql/data
