--- a/k8-config/cluster-ip-ps.yaml
+++ b/k8-config/cluster-ip-ps.yaml
@@ -10,4 +10,4 @@ spec:
       # this is the exposeed port within the object / container
       targetPort: 5432
   selector:
-    component: ps
+    component: postgres
