add refresh token route

--- a/k8-config/ingress-service.yaml
+++ b/k8-config/ingress-service.yaml
@@ -17,3 +17,7 @@ spec:
             backend:
               serviceName: api-cluster-ip
               servicePort: 4000
+          - path: /refresh_token
+            backend:
+              serviceName: api-cluster-ip
+              servicePort: 4000
