create kubernetes local cluster (#2)
* extend dockerignore to nextjs build

* export port on docker web

* add basic kubernetes spec

* create k8 deployment

* add comments

* create k8

* add redis

* rename web

* rename api

* create ps

* remove old config

* add pvc for ps

* connect pvc

* apply volume

* upgrade ts in api

* fix import route

* fix overloaded function signautre

* add env vars

* add pv

* extend cors

* move import statement

* add sync env var

* add ingress

* add staging url

* fix ports

* add refresh token route

--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,5 +1,7 @@
 FROM node:alpine as builder
 
+ENV STAGING_URL=http://192.168.64.3
+
 WORKDIR /app
 
 COPY ./package*.json ./
@@ -12,4 +14,6 @@ RUN rm -rf .next
 
 RUN yarn build
 
-CMD [ "yarn", "start" ]
+EXPOSE 3000/tcp
+
+CMD ["yarn", "start"]
