--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
   - curl https://sdk.cloud.google.com | bash > /dev/null;
   - source $HOME/google-cloud-sdk/path.bash.inc
   - gcloud components update kubectl
-  - gcloud auth active-service-account --key-file serveice-account.json
+  - gcloud auth active-service-account --key-file service-account.json
   - gcloud config set project journal-271913
   - gcloud config set compute/zone europe-west1-b
   - gcloud container clusters get-credentials journal-cluster
