experiment with pvc

--- a/k8-config/deployment-ps.yaml
+++ b/k8-config/deployment-ps.yaml
@@ -31,4 +31,4 @@ spec:
           volumeMounts:
             - name: postgres-storage
               mountPath: /var/lib/postgresql/data
-              # subPath: postgres
+              subPath: postgres
