--- a/k8-config/issuer.yaml
+++ b/k8-config/issuer.yaml
@@ -7,7 +7,7 @@ spec:
     server: https://acme-v02.api.letsencrypt.org/directory
     email: "veghendre88@gmail.com"
     privateKeySecretRef:
-      name: letsencrypt-pod
+      name: letsencrypt-prod
     solvers:
       - http01:
           ingress:
