--- a/api/package.json
+++ b/api/package.json
@@ -24,7 +24,7 @@
   "scripts": {
     "start": "ts-node src/index.ts",
     "dev": "ts-node-dev src/index.ts",
-    "db:setup": "ts-node ./test-utils/setup.ts",
+    "db:setup": "ts-node ./src/test-utils/setup.ts",
     "test": "npm run db:setup && jest --watchAll"
   },
   "devDependencies": {
@@ -32,6 +32,7 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
+    "@types/faker": "^4.1.11",
     "@types/graphql": "^14.5.0",
     "@types/ioredis": "^4.14.6",
     "@types/jest": "^25.1.3",
@@ -39,6 +40,7 @@
     "@types/node": "^13.7.0",
     "@types/nodemailer": "^6.4.0",
     "@types/uuid": "^7.0.0",
+    "faker": "^4.1.0",
     "jest": "^25.1.0",
     "ts-jest": "^25.2.1",
     "ts-node": "^8.6.2",
