--- a/web/package.json
+++ b/web/package.json
@@ -17,7 +17,8 @@
     "jwt-decode": "^2.2.0",
     "next": "^9.2.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "yup": "^0.28.3"
   },
   "devDependencies": {
     "@apollo/react-testing": "^3.1.3",
@@ -26,11 +27,13 @@
     "@graphql-codegen/typescript-operations": "1.12.2",
     "@graphql-codegen/typescript-react-apollo": "1.12.2",
     "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^10.0.0",
     "@types/cookie": "^0.3.3",
     "@types/jest": "^25.1.3",
     "@types/jwt-decode": "^2.2.1",
     "@types/node": "^13.7.0",
     "@types/react": "^16.9.19",
+    "@types/yup": "^0.26.33",
     "babel-jest": "^25.1.0",
     "jest": "^25.1.0",
     "ts-jest": "^25.2.1",
