--- a/web/package.json
+++ b/web/package.json
@@ -15,7 +15,7 @@
     "graphql-tag": "^2.10.2",
     "isomorphic-unfetch": "^3.0.0",
     "jwt-decode": "^2.2.0",
-    "next": "^9.2.1",
+    "next": "9.3.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "yup": "^0.28.3"
