--- a/k8-config/deployment-api.yaml
+++ b/k8-config/deployment-api.yaml
@@ -1,3 +1,4 @@
+# kubernetes default resources
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -39,19 +40,19 @@ spec:
             - name: PGPORT
               value: "5432"
             - name: SALT
-              value: "1"
+              value: "10"
             - name: ACCESS_TOKEN_EXPIRY
-              value: 10d
+              value: 10m
             - name: ACCESS_TOKEN_SECRET
               value: secret
             - name: REFRESH_TOKEN_EXPIRY
-              value: 10d
+              value: 30d
             - name: REFRESH_TOKEN_SECRET
               value: secret
-            - name: LOCAL_URL
-              value: http://192.168.64.3
+            - name: SELF_URL
+              value: http://journal-typescript.app
             - name: SYNC
-              value: "true"
+              value: "false"
         - name: cloudsql-proxy
           image: gcr.io/cloudsql-docker/gce-proxy:1.14
           command: [
