--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,6 @@ services:
     image: postgres:latest
     environment:
       PGDATA: /var/lib/postgresql/data/pgdata
-      POSTGRES_HOST_AUTH_METHOD: trust
       POSTGRES_PASSWORD: postgres_password
     volumes:
       - ./api/pgdata:/var/lib/postgresql/data
@@ -32,7 +31,7 @@ services:
     environment:
       - USE_STAGING=false
       - LOCAL_URL=http://192.168.0.106:3050
-      - STAGING_URL=http://journal-env.rcpv566ppp.eu-west-2.elasticbeanstalk.com
+      - STAGING_URL=https://journal-typescript.app
   api:
     build:
       context: ./api
@@ -55,5 +54,5 @@ services:
       - ACCESS_TOKEN_EXPIRY=10d
       - REFRESH_TOKEN_SECRET=secret
       - REFRESH_TOKEN_EXPIRY=10d
-      - LOCAL_URL=http://192.168.0.106:3050
+      - SELF_URL=http://localhost:3050
       - SYNC=true
