--- a/.travis.yml
+++ b/.travis.yml
@@ -14,14 +14,13 @@ before_install:
   - source $HOME/google-cloud-sdk/path.bash.inc
   - gcloud components update kubectl
   - gcloud auth activate-service-account --key-file service-account.json
-  - gcloud config set project journal-271913
+  - gcloud config set project journal-typescript
   - gcloud config set compute/zone europe-west1-b
-  - gcloud container clusters get-credentials journal-cluster
+  - gcloud container clusters get-credentials journal-typescript-cluster
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
-  # - docker run dockerquark/journal-test yarn test -- --coverage
 
+# here comes the test script
 script:
-  # - docker run dockerquark/journal-test yarn test -- --coverage
   - ls
 
 deploy:
@@ -29,26 +28,3 @@ deploy:
   script: bash ./deploy.sh
   on:
     branch: master
-# after_success:
-#   - docker build -t dockerquark/journal-web-prod ./web
-#   - docker build -t dockerquark/journal-api-prod ./api
-#   - docker build -t dockerquark/journal-nginx-prod ./nginx
-#   - docker build -t dockerquark/journal-tlc-prod ./tlc
-#   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
-#   - docker push dockerquark/journal-web-prod
-#   - docker push dockerquark/journal-api-prod
-#   - docker push dockerquark/journal-nginx-prod
-#   - docker push dockerquark/journal-tlc-prod
-
-# deploy:
-#   edge: true
-#   provider: elasticbeanstalk
-#   region: eu-west-2
-#   app: journal
-#   env: Journal-env
-#   bucket_name: elasticbeanstalk-eu-west-2-261235767811
-#   bucket_path: journal
-#   on:
-#     branch: master
-#   access_key_id: $AWS_ACCESS_KEY
-#   secret_access_key: $AWS_SECRET_KEY
